--- a/main.css
+++ b/main.css
@@ -3,6 +3,15 @@ html{
     font-family: livvic, sans-serif;
 }
 
+h1{
+    font-family: 'Livvic', sans-serif;
+    font-size: 25px;
+    color: #3535ec;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+}
 .background-overlay {
     position: absolute;
     top: 0;
@@ -33,4 +42,8 @@ input[type="password"]:focus + .background-overlay {
 .main{
     width: 50%;
     height: 100%;
+}
+
+form{
+    margin-bottom: 50px;
 }
