--- a/main.css
+++ b/main.css
@@ -82,11 +82,12 @@ max-width: 350px;
   }
 
   .modal-window{
+    margin-bottom: 50%;
     min-width: 320px;
   min-height: 320px;
   background-color: #de7eb6;
   border-radius: 12px;
-
+    margin: 20px;
   padding: 32px;
   text-align: center;
 
@@ -108,7 +109,6 @@ max-width: 350px;
     height: 100%;
     background-color: rgba(12, 11, 74, 0.8);
     
-    padding: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -130,8 +130,8 @@ max-width: 350px;
     justify-content: center;
 }
 .container {
-    max-width: 500px;
-    height: 800px;
+    max-width: max-content;
+    height: max-content;
     margin: 0 auto;
     align-items: center;
     display: flex;
@@ -140,6 +140,6 @@ max-width: 350px;
 }
 
 .model-icon{
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
 }
